--- a/Tracker.ipynb
+++ b/Tracker.ipynb
@@ -25,8 +25,8 @@
     "    def __init__(self, db_name, collection,\n",
     "                     window_size = 1*60, # 1 hour, in minutes\n",
     "                     update_for_first_k = 200, update_for_every_n = 10,\n",
-    "                     hashtag_boost = 1.5, decay_window = 1, \n",
-    "                     decay_factor_T = 1.0/2500, keep_top_perc = 95,similarity_threshold=0.3, host='localhost'):\n",
+    "                     hashtag_boost = 1.5, decay_window = 1,\n",
+    "                     clear_under_percentile = 80,similarity_threshold=0.3, host='localhost'):\n",
     "        \n",
     "        self.db = pymongo.MongoClient(host=host)[db_name]\n",
     "        self.collection = self.db[collection]\n",
@@ -36,8 +36,7 @@
     "        self.update_for_every_n = update_for_every_n\n",
     "        self.hashtag_boost = hashtag_boost\n",
     "        self.decay_window = decay_window\n",
-    "        self.decay_factor_T = decay_factor_T\n",
-    "        self.keep_top_perc = keep_top_perc\n",
+    "        self.clear_under_percentile = clear_under_percentile\n",
     "        self.similarity_threshold = similarity_threshold  \n",
     "        self.discarded=[]\n",
     "        \n",
@@ -75,12 +74,11 @@
     "                        \n",
     "                    current_time = tweet['date']\n",
     "                    k = timedelta(hours= self.decay_window)#1 )# entità considerate solo per k(decay window) hours\n",
-    "                    #print (tn - t0) , k\n",
     "                    \n",
     "                    if (current_time - cl.last_add_time) > k: \n",
     "                        # se non faccio aggiunte da molto tempo,\n",
     "                        #considero chiuso il cluster. Lo ignoro\n",
-    "                        #print current_time, cl.last_add_time, (current_time - cl.last_add_time) , k\n",
+    "                        \n",
     "                        cl.isActive=False\n",
     "                        #print \"Deactivated \", cl.cluster_index, \" \" , current_time - cl.last_add_time\n",
     "                        continue\n",
@@ -105,7 +103,7 @@
     "                    best_cluster = s[0][0] \n",
     "                    best_sim = s[0][1] \n",
     "                    tweet['sim'] = best_sim\n",
-    "\n",
+    "                        \n",
     "                    if best_sim > similarity_threshold:\n",
     "                        # aggiungi al migliore\n",
     "                        self.add_to_cluster(best_cluster,tweet)\n",
@@ -140,14 +138,10 @@
     "                v2.append(0.0) \n",
     "        \n",
     "        s = np.dot(v1, v2)/(np.linalg.norm(v1)*np.linalg.norm(v2))\n",
-    "        #v1 = v1/np.max(v1)\n",
-    "        #v2 = v2/np.max(v2)\n",
-    "        #s = np.dot(v1, v2)/(np.linalg.norm(v1)*np.linalg.norm(v2))\n",
     "        return s\n",
     "    \n",
     "    def get_tweet_vector(self,tweet):\n",
     "        tweet_vector={}\n",
-    "        #tweet_entities = [(x[0].lower(),x[1],x[2]) for x in tweet['entities']]\n",
     "        tweet_entities = [x for x in tweet['entities']]\n",
     "        c = Counter([x[0]for x in tweet_entities])\n",
     "        \n",
@@ -161,13 +155,12 @@
     "                 weight = weight * self.__hashtag_boost\n",
     "            tweet_vector[e]= weight\n",
     "        return tweet_vector\n",
-    "        #return tweet_vector/np.max(tweet_vector)\n",
     "    \n",
     "    \n",
     "    def start_new_cluster(self,tweet):\n",
     "        index = len(self.__clusters)\n",
     "        c = Cluster(index, update_for_first_k = self.update_for_first_k, update_for_every_n = self.update_for_every_n, \n",
-    "                 hashtag_boost= self.hashtag_boost, decay_window = self.decay_window,decay_factor_T = self.decay_factor_T)\n",
+    "                 hashtag_boost= self.hashtag_boost, decay_window = self.decay_window)#,decay_factor_T = self.decay_factor_T)\n",
     "        c.add_tweet(tweet)\n",
     "        self.__clusters.append(c)\n",
     "        return index\n",
@@ -177,7 +170,6 @@
     "        q = len(self.clusters[cluster_index].tweets)\n",
     "        #update every n and only for first k new tweets\n",
     "        if (q < self.__update_for_first_k ) and (q %self.__update_for_every_n  == 0 ):\n",
-    "            #print cluster_index,q\n",
     "            self.update_cluster(cluster_index,tweet['date'])\n",
     "        \n",
     "    def resemblance(self,tweet,cluster):\n",
@@ -198,7 +190,7 @@
     "    def clear_entities(self):\n",
     "        for cluster in self.__clusters:\n",
     "            if cluster.isActive:\n",
-    "                cluster.clear_entities(self.__keep_top_perc)\n",
+    "                cluster.clear_entities(self.__clear_under_percentile)\n",
     "    \n",
     "    #inverse cluster frequency: similar to IDF, icf(e) = total # of clusters / # of clusters that contain e\n",
     "    def icf(self,entity):\n",
@@ -224,41 +216,26 @@
     "        dict_e = {v['index']:e for (e,v) in cl.entities.items()}\n",
     "        for tweet_index in xrange(cl.M.shape[1]):\n",
     "            col= cl.M[:,tweet_index]\n",
-    "            #print col\n",
     "            tweet = cl.tweets[tweet_index]\n",
-    "            #print tweet['ins_id']\n",
     "            items = [e[0] for e in tweet['entities']]\n",
-    "            #print items\n",
     "            counter = Counter(items)\n",
-    "            #print counter\n",
     "            # con count fai la tf: con np.log2\n",
+    "            #sim\n",
+    "            sim=self.resemblance(tweet,cl)\n",
     "            for i,row in enumerate(col):\n",
-    "                #print i\n",
-    "                e = dict_e[i]\n",
-    "                #print e\n",
+    "                e = dict_e[i\n",
     "                if e in items: # oppure if row >0. Se non è presente nel tweet, row == 0\n",
-    "                    #print e\n",
     "                    # OLD TF\n",
     "                    old_tf = cl.M[i,tweet_index]\n",
-    "\n",
     "                    # WEIGHT entity,tweet\n",
     "                    icf_of_entity = self.icf(e)\n",
     "                    count = counter[e]\n",
     "                    weight = (1 + np.log2(count)) * icf_of_entity\n",
-    "                    #if cl.get_entity_type(e) =='#':\n",
     "                    if cl.entities[e]['type'] =='#':\n",
     "                         weight = weight * self.__hashtag_boost\n",
-    "                    #sim\n",
-    "                    sim=self.resemblance(tweet,cl)\n",
     "\n",
     "                    cl.M[i,tweet_index] = old_tf +  weight * sim\n",
     "                    cl.entities[e]['last_update'] = current_time\n",
-    "\n",
-    "            #print col\n",
-    "            #print cl.M[:,tweet_index]\n",
-    "            #print \"\"\n",
-    "            #print \"--------------\"\n",
-    "            # per fare il calcolo della similarity usi o rsemblance o containment\n",
     "    \n",
     "    \n",
     "    def stream_from_collection(self, window_size=1*60, selection=None):\n",
@@ -274,12 +251,11 @@
     "        match = {'$match': selection}\n",
     "        sort = {'$sort': {'date': 1}}\n",
     "        pipeline = [match, sort]\n",
-    "        for record in self.collection.aggregate(pipeline):#for record in self.collection.find().sort([(\"date\", 1)]):\n",
+    "        for record in self.collection.aggregate(pipeline):\n",
     "            if not start: \n",
     "                start = record[\"date\"]\n",
     "                end = start + timedelta(minutes = window_size )\n",
     "                tweets_in_this_window = []\n",
-    "                #tweets_in_this_window.append(record)\n",
     "\n",
     "            if record['date'] <= end:\n",
     "                tweets_in_this_window.append(record)\n",
@@ -410,22 +386,14 @@
     "    @decay_window.setter\n",
     "    def decay_window(self, decay_window):\n",
     "        self.__decay_window = decay_window    \n",
-    "    \n",
-    "    @property\n",
-    "    def decay_factor_T(self):\n",
-    "        return self.__decay_factor_T\n",
     "\n",
-    "    @decay_factor_T.setter\n",
-    "    def decay_factor_T(self, decay_factor_T):\n",
-    "        self.__decay_factor_T = decay_factor_T   \n",
-    "        \n",
     "    @property\n",
-    "    def keep_top_perc(self):\n",
-    "        return self.__keep_top_perc\n",
+    "    def clear_under_percentile(self):\n",
+    "        return self.__clear_under_percentile\n",
     "\n",
-    "    @keep_top_perc.setter\n",
-    "    def keep_top_perc(self, keep_top_perc):\n",
-    "        self.__keep_top_perc = keep_top_perc\n",
+    "    @clear_under_percentile.setter\n",
+    "    def clear_under_percentile(self, clear_under_percentile):\n",
+    "        self.__clear_under_percentile = clear_under_percentile\n",
     "    \n",
     "    @property\n",
     "    def discarded(self):\n",
@@ -446,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +426,7 @@
     "class Cluster(object):\n",
     "     \n",
     "    def __init__(self,cluster_index,update_for_first_k = 200, update_for_every_n = 10, \n",
-    "                 hashtag_boost= 1.5,decay_window = 1,decay_factor_T = 1.0/2500):\n",
+    "                 hashtag_boost= 1.5,decay_window = 1):\n",
     "        \n",
     "        self.update_for_first_k = update_for_first_k\n",
     "        self.update_for_every_n = update_for_every_n\n",
@@ -469,7 +437,6 @@
     "        self.M = np.zeros((len(self.tweets), len(self.entities)))\n",
     "        self.cluster_index = cluster_index\n",
     "        self.decay_window = decay_window\n",
-    "        self.decay_factor_T = decay_factor_T\n",
     "        self.last_add_time = None\n",
     "        self.isActive = True\n",
     "        \n",
@@ -507,39 +474,33 @@
     "            index = self.get_index(e) #entities[e]['index']\n",
     "            #print \"Set in M \", e, index, j\n",
     "            M[index][j] = c[e]\n",
+    "            self.entities[e]['last_add_time'] = tweet['date']\n",
     "        \n",
     "        self.__M = M\n",
     "        #print self.__M\n",
     "    \n",
     "    def get_decayed_centroid(self,current_time):\n",
-    "        \n",
+    "            \n",
     "        decayed_M = np.zeros(self.M.shape)\n",
-    "        T= self.decay_factor_T\n",
+    "        #T= self.decay_factor_T\n",
     "        tn = current_time\n",
     "        for e,v in self.entities.items():\n",
-    "            t0 = v['last_update']\n",
+    "            t0 = v['last_add_time']\n",
     "            k = timedelta(hours= self.decay_window)#1 )# entità considerate solo per k(decay window) hours\n",
+    "            w = k.total_seconds()\n",
     "            delta= tn-t0\n",
     "            delta_t = delta.total_seconds()\n",
-    "            #print \"time \",delta,delta_t\n",
-    "            damp = np.exp(-(delta_t)*T)\n",
     "            i = v['index']\n",
-    "            new_row = self.__M[i] * damp\n",
-    "            #print \"orig \",self.M[i]\n",
-    "            #print \"decayed \",new_row\n",
+    "            new_row = np.array([ tf - tf *(delta_t/w)  for tf in self.__M[i]])\n",
     "            decayed_M[i] = new_row\n",
-    "        \n",
-    "        #print \"decayedM\",decayed_M\n",
+    "            \n",
     "        norm_M= np.where(np.max(decayed_M, axis=0)==0, decayed_M, 0.5 + 0.5*decayed_M/np.max(decayed_M, axis=0)) \n",
-    "        #print \"NormM\" , norm_M\n",
     "        \n",
     "        ## BOOST PER GLI HASHTAG\n",
     "        # boosted tf entitity = boost x normalized tf\n",
     "        hashtag_indexes = [ v['index'] for e,v in self.__entities.items() if v['type'] == '#']\n",
-    "        #print hashtag_indexes\n",
     "        # boost a ogni riga in lista: moltiplicando per self.hashtag_boost\n",
     "        for i in hashtag_indexes:\n",
-    "            #print norm_M[i]\n",
     "            norm_M[i] = norm_M[i] * self.__hashtag_boost # * 1.5\n",
     "        \n",
     "        norm_centroid = [np.mean(r) for r in norm_M]\n",
@@ -609,15 +570,14 @@
     "    def clear_entities(self,perc=95):\n",
     "    \n",
     "        b = [ sum(r) for r in self.__M ]\n",
-    "        #print b\n",
     "        try:\n",
     "            p = np.percentile(b,perc)\n",
-    "            #print p\n",
     "            to_del = np.where(b<p)[0]\n",
+    "            if len(to_del) == len(b):\n",
+    "                return\n",
     "            to_del = sorted(to_del,reverse=True)\n",
     "            dict_e = {v['index']:e for (e,v) in self.__entities.items()}\n",
     "            realign = dict_e.values()\n",
-    "            #print self.__M.shape\n",
     "            for k in to_del:\n",
     "                #recupera stringa\n",
     "                e = dict_e[k]\n",
@@ -717,14 +677,6 @@
     "    @decay_window.setter\n",
     "    def decay_window(self, decay_window):\n",
     "        self.__decay_window = decay_window    \n",
-    "    \n",
-    "    @property\n",
-    "    def decay_factor_T(self):\n",
-    "        return self.__decay_factor_T\n",
-    "\n",
-    "    @decay_factor_T.setter\n",
-    "    def decay_factor_T(self, decay_factor_T):\n",
-    "        self.__decay_factor_T = decay_factor_T   \n",
     "        \n",
     "    @property\n",
     "    def last_add_time(self):\n",
@@ -745,43 +697,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jd = Tracker('inforet','rumors_entity_filtered', similarity_threshold=0.4, keep_top_perc=50,decay_window= 24)"
+    "jd = Tracker('inforet','rumors_entity_filtered', similarity_threshold=0.4, clear_under_percentile=50,decay_window= 24)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3600\n",
-      "200\n",
-      "10\n",
-      "1.5\n",
-      "24\n",
-      "0.0004\n",
-      "50\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print jd.window_size\n",
     "print jd.update_for_first_k\n",
     "print jd.update_for_every_n\n",
     "print jd.hashtag_boost\n",
     "print jd.decay_window\n",
-    "print jd.decay_factor_T\n",
-    "print jd.keep_top_perc\n",
+    "#print jd.decay_factor_T\n",
+    "print jd.clear_under_percentile\n",
     "#print jd.icfs\n",
     "print jd.clusters"
    ]
@@ -808,20 +745,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1188\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print len(jd.clusters)\n",
     "print len(jd.discarded)"
@@ -829,22 +757,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(16L, 1L)"
-      ]
-     },
-     "execution_count": 226,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cl = jd.clusters[2]\n",
     "cl.M.shape"
